fix(supported): truncate long mime-types to prevent overflow
If a mime-type is very long then it will break out of the styled
container on the `/supported` page and look unsightly.

The mime-type containers are now styled to truncate long mime-types and
ellipsise the string. This now means that some mime-types may not be
visible so an `alt` and `title` tag have been added to allow mouse hover
to display the full mime-type.

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -328,6 +328,9 @@ footer .copyright {
   padding: 10px;
   color: #31708F;
   background-color: #D9EDF7;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 @media (min-width: 1000px) {
